--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -9,7 +9,7 @@
             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
           </span>
         {% else %}
-          <a class="py-2 px-2 leading-none text-stone-600 bg-white rounded-l-lg border border-gray-300 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="{{ paginator.previous_page_path }}" data-turbo-frame="listing-posts">
+          <a class="py-2 px-2 leading-none text-stone-600 bg-white rounded-l-lg border border-gray-300 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="{{ paginator.previous_page_path }}" data-turbo-frame="listing-posts" aria-label="Previous">
             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
           </a>
         {% endunless %}
@@ -31,7 +31,7 @@
             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
           </span>
         {% else %}
-          <a class="py-2 px-2 leading-none text-stone-600 bg-white rounded-r-lg border border-gray-300 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="{{ paginator.next_page_path }}" data-turbo-frame="listing-posts">
+          <a class="py-2 px-2 leading-none text-stone-600 bg-white rounded-r-lg border border-gray-300 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="{{ paginator.next_page_path }}" data-turbo-frame="listing-posts" aria-label="Next">
             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
           </a>
         {% endunless %}
