--- a/_layouts/autopages_tags.html
+++ b/_layouts/autopages_tags.html
@@ -25,7 +25,7 @@ layout: default
       <h1 class="text-center text-stone-800 text-3xl md:text-4xl lg:text-5xl font-bold mb-4 md:mb-8">
         {% if page.autopage.display_name %}Posts sob a tag '{{ page.title }}'{% else %}{{ page.title }}{% endif %}
       </h1>
-      <div class="grid justify-items-stretch gap-2 md:gap-4 grid-cols-1 xs:grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:w-11/12 lg:mx-auto">
+      <div class="grid justify-items-stretch gap-2 md:gap-4 grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:w-11/12 lg:mx-auto">
         {% for tag in sorted_tags %}
           {% if page.autopage.display_name == tag %}
             <a class="justify-self-start py-1 px-3 text-sm xs:text-base sm:text-lg md:text-xl font-codepro rounded shadow-lg bg-sky-200 text-sky-800 opacity-40 hover:opacity-80 hover:bg-stone-200 hover:text-stone-800 transition duration-300 ease-in-out" href="/tags/" data-turbo-frame="listing-tags">{{ tag }}</a>
