--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,9 @@ layout: default
   {% if page.date %}
     {% include date-readtime.html date=page.date content=page.content align="center" %}
   {% endif %}
-  <img class="self-center object-contain w-5/6 md:w-3/4 h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.main_image | default: page.image }}" alt="{{ page.image_alt }}">
+  {% if page.image %}
+    <img class="self-center object-contain w-5/6 md:w-3/4 h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.main_image | default: page.image }}" alt="{{ page.image_alt }}">
+  {% endif %}
 
 <!-- Post Content -->
   <div class="self-center w-full prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-lg lg:prose-2xl">
