--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <script type="module">
       import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
     </script>
-    <script type="text/javascript" src="/dist/bundle.js"></script>
+    <script type="text/javascript" src="{{ '/dist/bundle.js' }}"></script>
   </head>
   <body class="bg-beige-100 dark:bd-black">
     <div class="container mx-auto px-6 md:px-4">
