--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -4,6 +4,10 @@
       data-hello-target="name">
     <button data-action="click->hello#greet">Greet</button>
   </div>
+  <div data-controller="theme">
+    <button data-action="click->theme#useDarkMode">Dark Mode</button>
+    <button data-action="click->theme#useLightMode">Light Mode</button>
+  </div>
   <a class="font-marker text-3xl md:text-4xl text-stone-900 hover:opacity-40 transition duration-200 ease-in-out" href="/">{{ site.title }}</a>
   <div class="flex justify-between">
     <a class="flex text-stone-900 hover:opacity-40 transition duration-200 ease-in-out" href="/tags/" aria-label="Tags icon">
