--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,10 +1,6 @@
-<header class="flex justify-between pt-6 pb-3 border-b-2 border-stone-400">
+<header class="flex justify-between pt-6 pb-3 border-b-2 border-stone-400 dark:border-stone-100">
   <a class="font-marker text-3xl md:text-4xl text-stone-900 dark:text-stone-200 hover:opacity-40 transition duration-200 ease-in-out" href="/">{{ site.title }}</a>
-  <div data-controller="dark-mode">
-    <button data-action="click->dark-mode#useDarkMode">Dark Mode</button>
-    <button data-action="click->dark-mode#useLightMode">Light Mode</button>
-  </div>
-  <div class="flex justify-between text-stone-900 dark:text-gray-200">
+  <div class="flex justify-between text-stone-900 dark:text-gray-200" data-controller="dark-mode">
     <a class="flex hover:opacity-40 transition duration-200 ease-in-out" href="/tags/" aria-label="Tags icon">
       <svg class="w-6 h-6 mt-1" fill="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
         <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
@@ -12,11 +8,20 @@
       </svg>
       <strong class="hidden mt-1 ml-1 md:block">Tags</strong>
     </a>
-    <a class="flex ml-4 hover:opacity-40 transition duration-200 ease-in-out" href="/about/" aria-label="coffee cup icon">
+    <a class="flex ml-2 sm:ml-4 hover:opacity-40 transition duration-200 ease-in-out" href="/about/" aria-label="coffee cup icon">
       <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg">
         <path d="M13 20h-7c-2.174-3.004-4-6.284-4-12h15c0 5.667-1.88 9.089-4 12zm5.119-10c-.057.701-.141 1.367-.252 2h1.55c-.449 1.29-1.5 2.478-2.299 2.914-.358 1.038-.787 1.981-1.26 2.852 3.274-1.143 5.846-4.509 6.142-7.766h-3.881zm-7.745-3.001c4.737-4.27-.98-4.044.117-6.999-3.783 3.817 1.409 3.902-.117 6.999zm-2.78.001c3.154-2.825-.664-3.102.087-5.099-2.642 2.787.95 2.859-.087 5.099zm9.406 15h-15v2h15v-2z"/>
       </svg>
       <strong class="hidden mt-1 md:block">About</strong>
     </a>
+    <button data-action="click->dark-mode#toggle" class="flex ml-1 sm:ml-3 hover:opacity-40 transition duration-200 ease-in-out">
+      <svg data-dark-mode-target="darkIcon" class="w-8 h-8 mt-1 hidden" fill="currentColor" viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+      </svg>
+      <svg data-dark-mode-target="lightIcon" class="w-8 h-8 mt-1 hidden" fill="currentColor" viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+        <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path>
+      </svg>
+      <strong class="hidden -ml-1 mt-1 md:block">Theme</strong>
+    </button>
   </div>
 </header>
