--- a/src/_includes/listed-post.html
+++ b/src/_includes/listed-post.html
@@ -39,7 +39,7 @@
     {% endif %}
   </div>
   {% for post in include.posts %}
-    <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg dark:shadow-gray-600 md:my-4 px-6 hover:shadow-2xl transition duration-200 ease-in-out">
+    <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg dark:shadow-gray-800 md:my-4 px-6 hover:shadow-2xl transition duration-200 ease-in-out">
         <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
           <a class="bg-gray-100" href="{{ post.url }}" data-turbo="false">
             <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out dark:bg-beige-100" alt="{{ post.image_alt }}" src="{{ post.main_image | default: post.image }}"/></a>
@@ -54,7 +54,8 @@
           <div class="mb-2">
             {% for tag in post.tags %}
               <!-- To do: align-middle isn't working -->
-              <a class="min-h-[36px] min-w-[36px] p-1 px-3 mr-1 mb-1 inline-block align-middle text-sm lg:text-base font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}" data-turbo="false">{{ tag }}</a>
+              <a class="min-h-[36px] min-w-[36px] p-1 px-3 mr-1 mb-1 inline-block align-middle text-sm lg:text-base font-semibold font-codepro rounded bg-stone-300 dark:bg-sky-600/60 dark:shadow dark:shadow-blue-500 text-stone-800 dark:text-stone-100 hover:bg-sky-200 dark:hover:bg-sky-300 hover:text-sky-800 dark:hover:text-black transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}" data-turbo="false">{{ tag }}</a>
+              <!-- <a class="min-h-[36px] min-w-[36px] p-1 px-3 mr-1 mb-1 inline-block align-middle text-sm lg:text-base font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}" data-turbo="false">{{ tag }}</a> -->
             {% endfor %}
           </div>
         {% endif %}
