--- a/src/_webpack/main.css
+++ b/src/_webpack/main.css
@@ -34,9 +34,9 @@
   height: auto;
 }
 
-.language-plaintext {
-  @apply px-1 py-1 bg-stone-200 font-medium rounded-md dark:text-stone-600
-}
+/* .language-plaintext { */
+/*   @apply px-1 py-1 bg-stone-200 font-medium rounded-md dark:text-stone-600 */
+/* } */
 
 .note-info {
   @apply py-4 px-6 text-sm sm:text-base lg:text-xl bg-sky-100/70 rounded-md dark:bg-sky-400/20
