--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,16 +5,6 @@
     </div>
     <div class="text-sm text-gray-600 dark:text-gray-200">
       <span>
-        &copy; {{ site.time | date: '%Y' }} {{ site.author }}. Desenvolvido com o framework
-        <a href="https://jekyllrb.com" rel="noopener noreferrer nofollow" target="_blank">
-          <b>Jekyll</b>
-        </a> e
-        <a href="https://tailwindcss.com" rel="noopener noreferrer nofollow" target="_blank">
-          <b>Tailwind</b>
-        </a>, sob a licença
-        <a href="https://choosealicense.com/licenses/bsd-3-clause/" rel="noopener noreferrer nofollow" target="_blank">
-          <b>3-Clause BSD</b>
-        </a>.
-      </span>
+        &copy; {{ site.time | date: '%Y' }} {{ site.author }}. {{ site.data.translations.developedWith[page.locale] }}</span>
     </div>
 </footer>
